--- a/README.adoc
+++ b/README.adoc
@@ -1287,6 +1287,39 @@ emacs --batch --eval $"sexpr $* >[2]/dev/null
 
 ----
 
+=== `monitors-info` - retrieves information of connected monitors
+
+.file::monitors-info
+[source,sh]
+----
+#!/usr/bin/env rc
+
+#
+# Retrieves information of the currently connected monitors and outputs as
+# followed:
+# * First name: <number of monitors>
+# * Second line: <monitor> <mode> <rate>
+#
+
+lines=`{xrandr \
+	| grep ' connected' \
+	| cut -d' ' -f1}
+
+echo $#lines
+for (output in $lines) {
+	data=`{xrandr \
+		| take-from '/'^$output^'/' \
+		| drop-lines 1 \
+		| take-lines 1 \
+		| tr -d '*' \
+		| tr -d '+'}
+	mode=`{echo $data | cut -d' ' -f1}
+	rate=`{echo $data | cut -d' ' -f2}
+	echo $output $mode $rate
+}
+
+----
+
 == License
 
 Unless clearly stated, do whatever you want with them.  If you like it, buy me
