--- a/README.adoc
+++ b/README.adoc
@@ -1320,6 +1320,16 @@ for (output in $lines) {
 
 ----
 
+=== `git-rm-orphaned` - removes orphaned files from Git
+
+.file::git-rm-orphaned
+[source,sh]
+----
+#!/bin/bash
+
+git ls-files --deleted | xargs git rm --cached
+
+----
 == License
 
 Unless clearly stated, do whatever you want with them.  If you like it, buy me
