--- a/README.adoc
+++ b/README.adoc
@@ -568,15 +568,17 @@ test -z "${id_2_}" && exit 0
 
 ##############################################################################
 
-do-notify-short "Configuring Logitech G502 mouse"
+do-notify "Configuring Logitech G502 mouse
+* Set natural scrolling
+* Tuning mouse movement
+"
 
-do-notify-short "* Set natural scrolling"
-xinput set-prop "${id_2_}" "Evdev Scrolling Distance" -1, -1, 1
-
-do-notify-short "* Tuning mouse movement"
-xinput set-prop "${id_2_}" "Device Accel Profile" 7
-xinput set-prop "${id_2_}" "Device Accel Constant Deceleration" 2
-xinput set-prop "${id_2_}" "Device Accel Adaptive Deceleration" 1
+for mouse_ in "${id_}" "${id_2_}"; do
+	xinput set-prop "${mouse_}" "Evdev Scrolling Distance" -1, -1, 1
+	xinput set-prop "${mouse_}" "Device Accel Profile" 7
+	xinput set-prop "${mouse_}" "Device Accel Constant Deceleration" 2
+	xinput set-prop "${mouse_}" "Device Accel Adaptive Deceleration" 1
+done
 
 ----
 
