feat: Add uri-github2ssh

--- a/README.adoc
+++ b/README.adoc
@@ -1347,6 +1347,40 @@ exec "$@"
 
 ----
 
+=== `uri-github2ssh` - converts Github URI to `git+ssh` style
+
+.file::uri-github2ssh
+[source,sh]
+----
+#!/usr/bin/env rc
+
+#
+# git@github.com:schacon/hg-git.git
+# git+ssh://git@github.com/schacon/hg-git.git
+#
+
+program=`{basename $0}
+
+if (~ $1 '' '--help') {
+	cat <<USAGE
+	exit 1
+}
+Usage: $program git@github.com:<user>/<repo>
+
+Converts to universal git+ssh style repository URI.
+
+E.g.
+
+  $program git@github.com:schacon/hg-git.git
+  # ⇨ git+ssh://git@github.com/schacon/hg-git.git
+USAGE
+
+uri=`{echo $1 | sed 's/:/\//g' | sed 's/git\/\/\///g'}
+
+echo 'git+ssh://'$uri
+
+----
+
 == License
 
 Unless clearly stated, do whatever you want with them.  If you like it, buy me
