--- a/README.adoc
+++ b/README.adoc
@@ -1478,6 +1478,20 @@ i3-input -f 'pango:Droid Sans 10' "$@"
 
 ----
 
+=== `i3-move-to-workspace` - moves a window to a workspace with http://i3wm.org/[i3]
+
+.file::i3-move-to-workspace
+[source,sh]
+----
+#!/bin/bash
+
+i3-input \
+	-f 'pango:Droid Sans 10' \
+	-F 'move workspace "%s"' \
+	-P 'Move window to workspace: ' %s
+
+----
+
 == License
 
 Unless clearly stated, do whatever you want with them.  If you like it, buy me
