--- a/README.adoc
+++ b/README.adoc
@@ -1492,6 +1492,20 @@ i3-input \
 
 ----
 
+=== `i3-rename-workspace` - renames current workspace in http://i3wm.org/[i3]
+
+.file::i3-rename-workspace
+[source,sh]
+----
+#!/bin/bash
+
+i3-input \
+	-f 'pango:Droid Sans 10' \
+	-F 'rename workspace to "%s"' \
+	-P 'Rename workspace: ' %s
+
+----
+
 == License
 
 Unless clearly stated, do whatever you want with them.  If you like it, buy me
