--- a/README.adoc
+++ b/README.adoc
@@ -1783,6 +1783,23 @@ i3-input -f 'pango:Droid Sans 10' -F 'workspace "%s"' -P 'Go to workspace: ' %s
 
 ----
 
+=== `join-lines`
+
+Joins all lines using Plan 9's tr.
+
+.file::join-lines
+[source,sh]
+----
+#!/usr/bin/env rc
+
+#
+# Joins all lines into one using Plan 9's tr.
+#
+
+tr '
+' ' '
+----
+
 == License
 
 Unless clearly stated, do whatever you want with them.  If you like it, buy me
