--- a/README.adoc
+++ b/README.adoc
@@ -1824,6 +1824,35 @@ nc -z 127.0.0.1 "$1"
 
 tr '
 ' ' '
+=== `start-xephyr` - starts a Xephyr server (for debugging window manager)
+
+TODO: Help text
+
+.file::start-xephyr
+[source,sh]
+----
+#!/bin/bash
+
+if ! which Xephyr &>/dev/null; then
+	echo Xephyr not found. >&2
+	echo Make sure you have Xephyr installed. >&2
+	exit 1
+fi
+
+resolution_=${RESOLUTION:-800x600}
+
+Xephyr \
+	-ac \
+	-br \
+	-noreset \
+	-screen ${resolution_} \
+	:1 "$@" >/dev/null & disown
+
+# export DISPLAY=:1.0
+echo Display: $DISPLAY
+
+----
+
 ----
 
 == License
