--- a/README.adoc
+++ b/README.adoc
@@ -1853,6 +1853,22 @@ echo Display: $DISPLAY
 
 ----
 
+=== `openfile-dialog` - creates a open-file dialog and prints the selected path to stdout
+
+.file::openfile-dialog
+[source,sh]
+----
+#!/bin/bash
+
+if ! which zenity &>/dev/null; then
+	echo zenity not found. >&2
+	echo Make sure you have Zenity installed. >&2
+	exit 1
+fi
+
+zenity --file-selection \
+    --filename `pwd` "$@" 2>/dev/null
+
 ----
 
 == License
