--- a/README.adoc
+++ b/README.adoc
@@ -1824,6 +1824,38 @@ nc -z 127.0.0.1 "$1"
 
 tr '
 ' ' '
+=== `wget-site`
+
+.file::wget-site
+[source,sh]
+----
+#!/bin/bash
+
+wget \
+    --recursive \
+    --no-clobber \
+    --page-requisites \
+    --html-extension \
+    --convert-links \
+    --timestamping \
+    --no-parent \
+    --mirror \
+    $*
+
+#
+# --recursive             download the entire Web site.
+# --domains website.org   don't follow links outside website.org.
+# --no-parent             don't follow links outside the directory tutorials/html/.
+# --page-requisites       get all the elements that compose the page (images, CSS and so on).
+# --html-extension        save files with the .html extension.
+# --convert-links         convert links so that they work locally, off-line.
+# --no-clobber            don't overwrite any existing files (used in case the download is interrupted and
+#                         resumed).
+# --mirror                create mirror
+#
+
+----
+
 === `start-xephyr` - starts a Xephyr server (for debugging window manager)
 
 TODO: Help text
