fix: Make cat-which work with multiple arguments

--- a/README.adoc
+++ b/README.adoc
@@ -195,16 +195,17 @@ Finds full path to executable and displays the content.
 #!/bin/bash
 
 #
-# Finds full path to executable and displays the content.
+# Finds full path executables and displays the content.
 #
 
-exec_="$@"
 
-if $(which "${exec_}" &>/dev/null); then
-	cat $(which "${exec_}")
-else
-	echo "${exec_} not found" >&2
-fi
+for exec_ in "$@"; do
+	if $(which "${exec_}" &>/dev/null); then
+		cat $(which "${exec_}")
+	else
+		echo "${exec_} not found" >&2
+	fi
+done
 
 ----
 
