--- a/README.adoc
+++ b/README.adoc
@@ -1835,8 +1835,20 @@ nc -z 127.0.0.1 "$1"
 
 ----
 
+=== `lockscreen`
 
-.file::join-lines
+.file::lockscreen
+[source,sh]
+----
+#!/bin/bash
+
+# pgrep lightdm && gdmflexiserver || gnome-screensaver-command -l
+xscreensaver-command -lock \
+	|| gnome-screensaver-command -l \
+	|| (sh -c "dbus-send --type=method_call --dest=org.gnome.ScreenSaver /org/gnome/ScreenSaver org.gnome.ScreenSaver.Lock")
+
+----
+
 [source,sh]
 ----
 #!/usr/bin/env rc
