--- a/README.adoc
+++ b/README.adoc
@@ -1858,16 +1858,22 @@ xset -display :0 dpms force off
 
 ----
 
+=== `now-standardized`
+
+.file::now-standardized
 [source,sh]
 ----
 #!/usr/bin/env rc
 
 #
-# Joins all lines into one using Plan 9's tr.
+# This script depends directly on `date' command, taking no addition argument,
+# thus original sh is enough.
 #
 
-tr '
-' ' '
+exec /bin/date '+%Y-%m-%d_%H-%M-%S'
+
+----
+
 === `take-lines` - takes the first `n` lines
 
 .file::take-lines
