--- a/README.adoc
+++ b/README.adoc
@@ -1885,6 +1885,22 @@ xterm -e 'date -R | xsel -b'
 
 ----
 
+
+=== `found-executable-p`
+
+.file::found-executable-p
+[source,sh]
+----
+#!/bin/bash
+
+#
+# Determines if a executable is found in $PATH
+#
+
+which "$1" &>/dev/null
+
+----
+
 === `take-lines` - takes the first `n` lines
 
 .file::take-lines
