--- a/README.adoc
+++ b/README.adoc
@@ -1942,6 +1942,23 @@ ps -ef | grep --color "$@"
 
 ----
 
+=== `py2` - runs Python 2 in a http://docs.python-guide.org/en/latest/dev/virtualenvs/[virtual environment]
+
+The name of the virtual environment could be set by setting the `VIRTUAL_ENV`
+environment variable.  By default, it uses `python2-full-debian` as its name.
+
+.file::py2
+[source,sh]
+----
+#!/bin/bash
+
+virtualenv_=${VIRTUAL_ENV:-python2-full-debian}
+
+source "${WORKON_HOME}/${virtualenv_}/bin/activate"
+exec python "$@"
+
+----
+
 === `rc` - runs RC shell with Plan 9 Port environment
 
 .file::rc
