--- a/README.adoc
+++ b/README.adoc
@@ -1976,6 +1976,20 @@ exec python3 "$@"
 
 ----
 
+=== `site-packages-path` - prints Python site packages path
+
+.file::site-packages-path
+[source,sh]
+----
+#!/usr/bin/env python
+
+from distutils.sysconfig import get_python_lib
+
+
+print(get_python_lib())
+
+----
+
 === `rc` - runs RC shell with Plan 9 Port environment
 
 .file::rc
