fix: Code block should be highlighted with Ruby syntax

--- a/README.adoc
+++ b/README.adoc
@@ -2195,7 +2195,7 @@ zenity --file-selection \
 === `update-sbcl.ruby`
 
 .file::update-sbcl.ruby
-[source,sh]
+[source,ruby]
 ----
 #!/usr/bin/env ruby
 
