--- a/README.adoc
+++ b/README.adoc
@@ -862,6 +862,25 @@ xrandr --output $main_mon --gamma $gamma:$gamma:$gamma
 
 ----
 
+=== `extract-audio`
+
+Extracts from a video file, creating the same file name with appropriate
+extension.
+
+.file::extract-audio
+[source,sh]
+----
+#!/bin/zsh
+
+which ffpmeg &>/dev/null && prog_=ffmpeg || prog_=avconv
+
+file_="$1"
+
+${prog_} -i "${file_}" -vn -acodec copy \
+         "$file_:r.$(ffprobe ${file_} 2>&1 | grep Audio | sed -rn 's/.*Audio: ([^ ]*).*/\1/p')"
+
+----
+
 === `convert-to-mp3` - converts files to MP3
 
 This script takes a list of files as arguments.
