--- a/README.adoc
+++ b/README.adoc
@@ -947,8 +947,9 @@ Returns the average CPU usage measured in 3 consecutive seconds, using `mpstat`.
 # Using `mpstat', calculates average CPU usage in 3 seconds.
 #
 
-if ! which mpstat &>/dev/null ; then
-	echo You need mpstat installed for this command to work >&2
+if ! found-executable-p mpstat; then
+	echo mpstat not found. >&2
+    echo Make sure you have Sysstat installed. >&2
 	exit 1
 fi
 
