--- a/README.adoc
+++ b/README.adoc
@@ -1019,8 +1019,9 @@ EOF
 # Sanity check
 ##############################################################################
 
-if (! which sbcl >/dev/null >[2=1]) {
-	echo sbcl executable not found.  Do you have SBCL installed? >[1=2]
+if (! found-executable-p sbcl) {
+	echo sbcl executable not found >[1=2]
+	echo Make sure you have SBCL installed >[1=2]
 	exit 1
 }
 if not {
@@ -1085,8 +1086,9 @@ if (test -d $SHELLY_HOME/dumped-cores) {
 # Makes a JSON POST with Curl
 #
 
-if (! which curl >/dev/null >[2=1]) {
-	echo You need to install Curl >[1=2]
+if (! found-executable-p curl) {
+	echo curl not found >[1=2]
+	echo Make sure you have Curl installed >[1=2]
 	exit 1
 }
 
@@ -1175,7 +1177,7 @@ tail -n +$n_lines
 # soimort/translate-shell tool.
 #
 
-if (! which trans >/dev/null >[2=1]) {
+if (! found-executable-p trans) {
 	echo trans command not found >[1=2]
 	echo Make sure you have soimort/translate-shell installed >[1=2]
 	exit 1
