--- a/README.adoc
+++ b/README.adoc
@@ -200,6 +200,23 @@ acme -a \
 
 ----
 
+=== `gnu-awk` - specifically calls the GNU implementation of Awk
+
+.file::gnu-awk
+[source,sh]
+----
+#!/bin/bash
+
+if ! found-executable-p gawk; then
+	echo gawk not found. >&2
+	echo Make sure you have GNU Awk installed. >&2
+	exit 1
+fi
+
+exec gawk "$@"
+
+----
+
 === `cat-which <executable>` - `cat $(which executable)`
 
 .file::cat-which
