[feat] Add script to specifically call GNU sed

--- a/README.adoc
+++ b/README.adoc
@@ -217,6 +217,31 @@ exec gawk "$@"
 
 ----
 
+=== `gnu-sed` - specifically calls the GNU implementation of sed
+
+.file::gnu-sed
+[source,sh]
+----
+#!/bin/bash
+
+if ! found-executable-p sed; then
+	echo sed not found. >&2
+	echo Make user you have GNU sed installed. >&2
+	exit 1
+fi
+
+if (/bin/sed --version | head -1 | grep sed &>/dev/null); then
+	exec /bin/sed "$@"
+elif (sed --version | head -1 | grep sed &>/dev/null); then
+	exec sed "$@"
+else
+	echo You don\'t have GNU sed installed. >&2
+    exit 1
+fi
+
+----
+
+
 === `cat-which <executable>` - `cat $(which executable)`
 
 .file::cat-which
