[refactor] Use gnu-sed instead of /bin/sed

--- a/README.adoc
+++ b/README.adoc
@@ -2340,7 +2340,7 @@ download_url=`{lynx -dump $download_page \
 
 
 latest_version=`{echo $download_url \
-	| /bin/sed 's/.*racket-\(.*\)-x86_64.*/\1/'}
+	| gnu-sed 's/.*racket-\(.*\)-x86_64.*/\1/'}
 
 installer=`{echo $download_url \
 	| awk 'BEGIN { FS="/" } { print $NF }'}
@@ -2482,12 +2482,12 @@ latest_version=`{lynx -dump $repo_url \
     | awk 'BEGIN { FS="/" } { print $NF }' \
     | awk 'BEGIN { FS="source_" } { print $2 }' \
     | awk 'BEGIN { FS=".deb" } { print $1 }' \
-    | /bin/sed 's/_all//g'}
+    | gnu-sed 's/_all//g'}
 echo Latest version: $latest_version
 
 
 current_version=`{apt-cache show openjdk-8-jdk \
-    | /bin/sed -n '/installed/,+10p' \
+    | gnu-sed -n '/installed/,+10p' \
     | grep Version \
     | awk '{ print $2 }'}
 echo Current version: $current_version
